# rsx

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt  kondo-ics-adapter-at-linux.md  setup_mingw.sh
h/dpservo/: dp_err.h  dp_type.h  dpservo.h  servo.h  tags
h/dpservo/dpspp/: dpspp.h
h/dpservo/ics/: ics.h
h/dpservo/ics/mmap/: ics3x.h
h/dpservo/icspp/: icspp.h
h/dpservo/rsx/: rsx.h  rsx_pkt.h
h/dpservo/rsxpp/: rsxpp.h
h/dpservo/serial/: hr_serial.h  hr_tty.h  hr_unixio.h
h/dpservo/serial/mingw/: hr_tty_impl.h  hr_unixio_impl.h
h/dpservo/serial/posix/: hr_tty_impl.h  hr_unixio_impl.h
h/dpservo/serial/stub/: hr_tty_impl.h  hr_unixio_impl.h
h/dpservo/time/: hr_unixtime.h
h/dpspp/: dpspp.h  tags
h/rsx/: ics.h  ics_type.h  rsx.h  rsx_err.h  rsx_pkt.h  rsx_type.h
h/rsx/mmap/: ics3x.h  rs30x.h
h/rsx/serial/: hr_serial.h
h/rsx/time/: hr_unixtime.h
h/rsxpp/: rsxpp.h
include/rsx/: rsx.h  rsx_common.h  rsx_err.h  rsx_io.h  rsx_raw.h  rsx_type.h
include/rsx/serial/: hr_serial.h  hr_unixio.h
include/rsx/util/: time.h
matlab/: CMakeLists.txt
matlab/dps_proxy/: CMakeLists.txt
matlab/dps_proxy/h/dps_proxy/: dps_proxy.h
matlab/dps_proxy/src/: dps_proxy.c
matlab/mex/: CMakeLists.txt
matlab/mex/src/: dps_add_servo.c  dps_assign.c  dps_clear_servo.c  dps_close.c  dps_get_num_of_servo.c  dps_open.c  dps_read_mem.c  dps_release.c  dps_set_goal.c  dps_set_goals.c  dps_set_offset_angle.c  dps_set_offset_angles.c  dps_set_serial.c  dps_set_servo.c  dps_set_state.c  dps_set_states.c  dps_write_mem.c  helper.h  target.txt
matlab/sample/: dp_get_rpy_rot.m  dp_update_links.m  draw_cylinder.m  draw_rectangular.m  update_biped_pose.m
python/: CMakeLists.txt  build.sh
python/sample/: rsx_servo_state.py
python/src/: dpservo.cc  icspy.cc  icspy.h  rsx_py.cc  rsxpy.cc  rsxpy.h  servopy.h
sample/: CMakeLists.txt
sample/src/: bulk_position.c  bulk_torque.c  helper.h  ics_mem_access.c  ics_mem_read_test.c  ics_set_id.c  ics_test.c  main.c  measure_latency.c  oneshot_change_baudrate.c  oneshot_check_connection.c  oneshot_get_device_info.c  oneshot_position.c  oneshot_reboot.c  oneshot_special.c  oneshot_torque.c  read_current_status.c  rsx_get_all_angles.c  rsx_get_mmap.c  rsx_latency_test.c  rsx_servo_off.c  rsx_set_baudrate.c  rsx_spkt.c  rsx_test.c  util.c  util.h
src/: CMakeLists.txt  ics.c  rsx.c  rsx_pkt.c  rsx_raw.c
src/rs30x/: rs30x.c
src/serial/: hr_serial.c  hr_unixio.c
src/serial/mingw/: hr_tty.c  hr_unixio.c
src/serial/posix/: hr_tty.c  hr_unixio.c
src/serial/stub/: hr_tty.c  hr_unixio.c
src/time/: hr_unixtime.c
src/util/: time.c
